@@ -4553,7 +4553,22 @@ std::map < std::string, double > TtHFit::PerformFit( RooWorkspace *ws, RooDataSe
         fitTool -> ConstPOI(false);
     }
     fitTool -> SetRandomNP(fRndRange, fUseRnd);
-
+    
+    //
+    // Fit starting from custom point
+    if(fFitResultsFile!=""){
+        ReadFitResults(fFitResultsFile);
+        std::vector<std::string> npNames;
+        std::vector<double> npValues;
+        for(unsigned int i_np=0;i_np<fFitResults->fNuisPar.size();i_np++){
+            npNames.push_back(  fFitResults->fNuisPar[i_np]->fName );
+            npValues.push_back( fFitResults->fNuisPar[i_np]->fFitValue );
+        }
+        fitTool -> SetNPs( npNames,npValues );
+    }
+    
+    //
+    // Set Minos
     if(fVarNameMinos.size()>0){
         std::cout << "Setting the variables to use MINOS with" << std::endl;
         fitTool -> UseMinos(fVarNameMinos);
@@ -5982,17 +5997,21 @@ void TtHFit::GetLikelihoodScan( RooWorkspace *ws, string varName, RooDataSet* da
 
   TString tag("");
   RooAbsReal* pll = nll->createProfile(*var);
-  RooPlot* frameLH = var->frame(Title("-log(L) vs "+vname),Bins(30),Range(-1.5,3.5));
-  pll->plotOn(frameLH,RooFit::Precision(-1),LineColor(kRed), NumCPU(3));
+//   RooPlot* frameLH = var->frame(Title("-log(L) vs "+vname),Bins(30),Range(-1.5,3.5));
+  RooPlot* frameLH = var->frame(Title("-log(L) vs "+vname),Bins(30),Range(-3.,3.));
+  pll->plotOn(frameLH,RooFit::Precision(-1),LineColor(kRed), NumCPU(TtHFitter::NCPU));
   RooCurve* curve = frameLH->getCurve();
+  curve->Draw();
 
   float val = var->getVal();
-  Double_t minVal = 0;
-  Double_t maxVal = 2;
-  if(val>1/5) {
-    minVal = val - 2; if(minVal<0) { minVal = 0; }
-    maxVal = val + 2;
-  }
+//   Double_t minVal = 0;
+//   Double_t maxVal = 2;
+//   if(val>1/5) {
+//     minVal = val - 2; if(minVal<0) { minVal = 0; }
+//     maxVal = val + 2;
+//   }
+  Double_t minVal = -3.;
+  Double_t maxVal =  3.;
   frameLH->GetXaxis()->SetRangeUser(minVal,maxVal);
   
   // fit function
@@ -6000,13 +6019,17 @@ void TtHFit::GetLikelihoodScan( RooWorkspace *ws, string varName, RooDataSet* da
   curve->Fit(poly,"RQN"); // R=range, Q=quiet, N=do not draw
   TString fitStr = Form("%5.2f + %5.2fx + %5.2fx^{2}", poly->GetParameter(0), poly->GetParameter(1), poly->GetParameter(2));
   TLatex* latex = new TLatex();
-  latex->SetNDC(); latex->SetTextSize(0.055); latex->SetTextAlign(32);
+  latex->SetNDC(); // latex->SetTextSize(0.055);
+//   latex->SetTextSize(gStyle->GetTextSize());
+  latex->SetTextAlign(32);
   latex->SetText(0.925,0.925, fitStr);
 
   // y axis
   //frameLH->updateYAxis(minVal,maxVal,"");
-  frameLH->GetYaxis()->SetRangeUser(minVal,5.0);
+//   frameLH->GetYaxis()->SetRangeUser(minVal,5.0);
+  frameLH->GetYaxis()->SetRangeUser(0,5.0);
   frameLH->GetYaxis()->SetTitle("#Delta [-Log(L)]");
+  if(TtHFitter::NPMAP[varName]!="") frameLH->GetXaxis()->SetTitle(TtHFitter::NPMAP[varName].c_str());
 
   TString cname="";
   cname.Append("NLLscan_");
@@ -6016,11 +6039,17 @@ void TtHFit::GetLikelihoodScan( RooWorkspace *ws, string varName, RooDataSet* da
   can->SetName(cname);
   can->cd();
   frameLH->Draw();
-  latex->Draw("same");
+//   latex->Draw("same");
+  
+  TLine *l1s = new TLine(-3.,0.5,3.,0.5);
+  l1s->SetLineStyle(kDotted);
+  l1s->Draw();
 
   TString LHDir("LHoodPlots/");  
   system(TString("mkdir -vp ")+fName+"/"+LHDir);
-  can->SaveAs( fName+"/"+LHDir+"NLLscan_"+varName+"."+fImageFormat );
+  
+  for(int i_format=0;i_format<(int)TtHFitter::IMAGEFORMAT.size();i_format++)
+      can->SaveAs( fName+"/"+LHDir+"NLLscan_"+varName+"."+TtHFitter::IMAGEFORMAT[i_format] );
 }
 
 //____________________________________________________________________________________
