@@ -11,10 +11,11 @@ Job: "ttH2015"
   LumiLabel: "85 pb^{-1}"
   MCweight: "FinalWeight*weight_leptonSF*weight_bTagSF"
   Lumi: 84.9676
+%   LumiScale: 10
 %   LumiScale: 10    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
   Selection: "trigger>0 && (e_jets || mu_jets)"
 %   PlotOptions: "YIELDS"
-%   PlotOptions: "NOSIG,OVERSIG"
+  PlotOptions: "NOSIG,OVERSIG"
   NtupleName: "nominal"
   DebugLevel: 0
 %   MCstatThreshold: 0.01
@@ -31,19 +32,20 @@ Job: "ttH2015"
 %   StatOnly: TRUE
 %   WorkspaceFileName: "ttH2015/RooStats/ttH2015_combined_ttH2015_model.root"
   SystCategoryTables: TRUE
-
+  
 % --------------- %
 % ---  FIT    --- %
 % --------------- %
 
 Fit: "fit"
   FitType: SPLUSB
+%   FitType: BONLY
   FitRegion: CRSR
-%   FitBlind: TRUE
-%   doLHscan: "ttXsec"
-%   FitBlind: TRUE
-  POIAsimov: 0
+  FitBlind: TRUE
+  POIAsimov: 1
   UseMinos: SigXsecOverSM
+%   doLHscan: "ttXsec"
+  doLHscan: tt_Rad_HiLow,JES_Scenario1_NP2
 
 % --------------- %
 % ---  LIMIT    --- %
@@ -97,10 +99,10 @@ Region: "HThad_ge6jge4b"
 % --- SAMPLES --- %
 % --------------- %
 
-Sample: "Data"
-  Title: "Data 2015"
-  Type: DATA
-  NtupleFile: "data"
+% Sample: "Data"
+%   Title: "Data 2015"
+%   Type: DATA
+%   NtupleFile: "data"
 
 Sample: "ttH"
   Type: SIGNAL
